tests/ui/binop/binop-bitxor-str.rs
fn main() { let x = "a".to_string() ^ "b".to_string(); }
//~^ ERROR no implementation for `String ^ String`
